--- a/xbox/FInal.css
+++ b/xbox/FInal.css
@@ -12,7 +12,7 @@
 }
 
 .xbox.disconnected {
-    background: url(disconnected-svg);
+    background: url(xbox-assets/disconnected.svg);
 }
 
 .xbox.disconnected div {
