--- a/xbox/FInal.css
+++ b/xbox/FInal.css
@@ -41,7 +41,7 @@
 .xbox .bumper {
     width: 170px;
     height: 61px;
-    background: url(bumper.png);
+    background: url(bumpermod1.png);
     opacity: 0;
 }
 
