Update and rename xboxmod2css to xboxmod2.css

--- a/xboxmod2/xboxmod2.css
+++ b/xboxmod2/xboxmod2.css
@@ -7,7 +7,7 @@
         margin-top: -285px;*/
 
 .xbox.disconnected {
-    background: url(disconnectedmod2.png);
+    background: url(disconnected2.png);
 }
 
 .xbox.disconnected div {
