--- a/wave/xboxwave.css
+++ b/wave/xboxwave.css
@@ -1,6 +1,6 @@
 /*BEGIN Xbox One Controller Styling*/
 .controller.xbox {
-    background: url(Xboxwave.png);
+    background: url(xboxwave.png);
     height: 630px;
     width: 750px;
     /*    margin-left: -375px;
